# communiCycle-api

./: .env  celery.conf  gunicorn.conf.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: prod.yml
contacts/: views.py
control/: admin.py  functions.py  models.py  views.py
control/migrations/: 0001_initial.py  0002_pdffile_company_name.py  0003_alter_pdffile_grouping.py  0003_rename_contact_messagecontrol_contact_number_and_more.py  0004_rename_pdf_pdffile_file.py
messages_api/: admin.py  event.py  models.py  views.py
messages_api/migrations/: 0002_alter_ticket_last_message_id_and_more.py
webhook/: __init__.py  exceptions.py  settings.py  urls.py  views.py
webhook/functions/: check_ram_state.py  model_obj.py
webhook/utils/: get_objects.py  tools.py
